--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
   },
   "type": "module",
   "devDependencies": {
-    "ncp": "^2.0.0",
-    "sync-request": "^6.1.0",
-    "tfx-cli": "^0.6.3",
-    "y18n": "^4.0.1",
     "@types/jquery": "^2.0.34",
-    "rimraf": "^2.5.4",
     "azure-pipelines-task-lib": "^3.0.4-preview.0",
     "fs-extra": "^9.0.1",
+    "ncp": "^2.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.4",
-    "vss-web-extension-sdk": "^2.109.0"
+    "rimraf": "^2.5.4",
+    "sync-request": "^6.1.0",
+    "tfx-cli": "^0.6.3",
+    "typescript": "^4.2.3",
+    "vss-web-extension-sdk": "^2.109.0",
+    "y18n": "^4.0.1"
   },
   "dependencies": {
+    "@types/node": "^17.0.21",
     "@types/q": "0.0.32",
-    "@types/node": "^14.14.5",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.1.1"
   }
 }
