--- a/tasks/synopsys-sigma-task/package.json
+++ b/tasks/synopsys-sigma-task/package.json
@@ -23,6 +23,7 @@
     "y18n": "^4.0.1"
   },
   "dependencies": {
+    "@jcroall/synopsys-sig-node": "^1.0.20",
     "@types/jquery": "^2.0.34",
     "axios": "^0.21.1",
     "azure-devops-node-api": "^11.1.1",
